--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
-    "@supabase/supabase-js": "^2.38.5",
     "@types/bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -39,7 +38,9 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "@supabase/supabase-js": "^2.38.5"
+
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
